# learnopengl

./: .clang-format  .gitignore  CMakeLists.txt  ISSUES.md  README.md  build-debug.sh  build-release.sh  compile.sh  compile_commands.json  generate_app.sh  run.sh
.ccls-cache/@@Users@emirhurturk@Dev@Projects@OpenGL@learnopengl/: @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Availability.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityInternal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityVersions.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctermid.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_stdio.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_intmax_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint16_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint32_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint64_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint8_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@alloca.h.blob  (+79 more)
Debug/: CMakeCache.txt  LearnOpenGL  Makefile  cmake_install.cmake  compile_commands.json  imgui.ini
Release/: CMakeCache.txt  LearnOpenGL  Makefile  cmake_install.cmake  compile_commands.json  imgui.ini
apps/: Mandelbrot.cpp  Mandelbrot.hpp  SponzaApp.cpp  SponzaApp.hpp  TestApp.cpp  TestApp.hpp
include/: Application.hpp  Camera.h  Engine.hpp  Entity.hpp  Mesh.hpp  Model.hpp  Quark.hpp  Resource.hpp  Scene.h  Shader.hpp  Utils.hpp  Window.hpp  common.h
src/: Camera.cpp  Engine.cpp  Mesh.cpp  Model.cpp  Resource.cpp  Scene.cpp  Shader.cpp  Utils.cpp  Window.cpp  main.cpp
(+274 files in other folders)
